@@ -12,10 +12,6 @@ CONFIG_HOST_LINUX=y
 # CONFIG_HOST_OSX is not set
 # CONFIG_HOST_WINDOWS is not set
 # CONFIG_HOST_OTHER is not set
-# CONFIG_WINDOWS_NATIVE is not set
-# CONFIG_WINDOWS_CYGWIN is not set
-# CONFIG_WINDOWS_MSYS is not set
-# CONFIG_WINDOWS_OTHER is not set
 
 #
 # Build Configuration
@@ -113,16 +109,10 @@ CONFIG_ARCH_HAVE_MPU=y
 #
 # ARMV7M Configuration Options
 #
-# CONFIG_ARMV7M_TOOLCHAIN_ATOLLIC is not set
 # CONFIG_ARMV7M_TOOLCHAIN_BUILDROOT is not set
 # CONFIG_ARMV7M_TOOLCHAIN_CODEREDL is not set
-# CONFIG_ARMV7M_TOOLCHAIN_CODEREDW is not set
 CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYL=y
-# CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_DEVKITARM is not set
 # CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL is not set
-# CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_RAISONANCE is not set
 # CONFIG_SERIAL_TERMIOS is not set
 
 #
@@ -227,15 +217,37 @@ CONFIG_STM32_STM32F401=y
 #
 # STM32 Peripheral Support
 #
+# CONFIG_STM32_HAVE_CCM is not set
 # CONFIG_STM32_HAVE_USBDEV is not set
 CONFIG_STM32_HAVE_OTGFS=y
 # CONFIG_STM32_HAVE_FSMC is not set
+# CONFIG_STM32_HAVE_USART3 is not set
+# CONFIG_STM32_HAVE_USART4 is not set
+# CONFIG_STM32_HAVE_USART5 is not set
+CONFIG_STM32_HAVE_USART6=y
+# CONFIG_STM32_HAVE_USART7 is not set
+# CONFIG_STM32_HAVE_USART8 is not set
+CONFIG_STM32_HAVE_TIM1=y
+CONFIG_STM32_HAVE_TIM5=y
+# CONFIG_STM32_HAVE_TIM6 is not set
+# CONFIG_STM32_HAVE_TIM7 is not set
+# CONFIG_STM32_HAVE_TIM8 is not set
+CONFIG_STM32_HAVE_TIM9=y
+CONFIG_STM32_HAVE_TIM10=y
+CONFIG_STM32_HAVE_TIM11=y
+# CONFIG_STM32_HAVE_TIM12 is not set
+# CONFIG_STM32_HAVE_TIM13 is not set
+# CONFIG_STM32_HAVE_TIM14 is not set
+# CONFIG_STM32_HAVE_TIM15 is not set
+# CONFIG_STM32_HAVE_TIM16 is not set
+# CONFIG_STM32_HAVE_TIM17 is not set
+# CONFIG_STM32_HAVE_ADC2 is not set
+# CONFIG_STM32_HAVE_ADC3 is not set
+# CONFIG_STM32_HAVE_ADC4 is not set
+# CONFIG_STM32_HAVE_CAN1 is not set
+# CONFIG_STM32_HAVE_CAN2 is not set
 # CONFIG_STM32_ADC1 is not set
-# CONFIG_STM32_ADC2 is not set
-# CONFIG_STM32_ADC3 is not set
 # CONFIG_STM32_BKPSRAM is not set
-# CONFIG_STM32_CAN1 is not set
-# CONFIG_STM32_CAN2 is not set
 # CONFIG_STM32_CCMDATARAM is not set
 # CONFIG_STM32_CRC is not set
 # CONFIG_STM32_CRYP is not set
@@ -263,20 +275,11 @@ CONFIG_STM32_SYSCFG=y
 # CONFIG_STM32_TIM3 is not set
 # CONFIG_STM32_TIM4 is not set
 # CONFIG_STM32_TIM5 is not set
-# CONFIG_STM32_TIM6 is not set
-# CONFIG_STM32_TIM7 is not set
-# CONFIG_STM32_TIM8 is not set
 # CONFIG_STM32_TIM9 is not set
 # CONFIG_STM32_TIM10 is not set
 # CONFIG_STM32_TIM11 is not set
-# CONFIG_STM32_TIM12 is not set
-# CONFIG_STM32_TIM13 is not set
-# CONFIG_STM32_TIM14 is not set
 # CONFIG_STM32_USART1 is not set
 CONFIG_STM32_USART2=y
-# CONFIG_STM32_USART3 is not set
-# CONFIG_STM32_UART4 is not set
-# CONFIG_STM32_UART5 is not set
 # CONFIG_STM32_USART6 is not set
 # CONFIG_STM32_IWDG is not set
 # CONFIG_STM32_WWDG is not set
